Дорабатываю страницу подачи объявления

--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -207,83 +207,126 @@
 
             <div class="row mb-2 pt-3 pb-3 rounded ad-thumb">
                 <div class="col-3 align-self-start">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, consequuntur esse et facilis fugiat ipsam labore magnam necessitatibus nesciunt nisi odit provident quo reiciendis! Ab atque delectus deleniti doloremque, doloribus eaque earum esse eum ex facilis fugiat fugit in iure libero minus nemo nobis omnis placeat qui quidem reiciendis sit ut. Commodi, earum unde?
+                    <img class="img-fluid rounded" src="../img/thumb_150x190_printer_.jpg">
                 </div>
                 <div class="col-6">
                     <div class="row h-100">
                         <div class="col-12 align-self-start">
-                            One of three columns
-                            1
+                            <h6>Продам МФУ SCX-4200 как новый</h6>
+                            <div class="ad-secondary-text">Samsung</div>
+                            <div class="ad-secondary-text">SCX-4200</div>
+                            <p class="mb-0">Отличный МФУ (принтер, сканер и копир, 3 в 1) для дома и учебы! Так же отлично подойдет для офиса.</p>
+                            <p class="mb-0">Лазерный, Ч/Б, USB/LAN, 24 тыс. стр.</p>
+
                         </div>
                         <div class="col-12 align-self-end">
-                            2
+                            <div class="ad-secondary-text">Сегодня, 09:43</div>
+                            <div class="ad-secondary-text">г. Самара, ул. Красногвардейская дом 20</div>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 align-self-end">
-                    One of three columns
-                </div>
-            </div>
-
-            <div class="row mb-2 pt-3 pb-3 rounded ad-thumb">
                 <div class="col-3">
-                    <img class="img-fluid rounded" src="../img/thumb_150x190_printer_.jpg">
-                </div>
-                <div class="col-6 pl-2">
                     <div class="row h-100">
-                        <div class="col-12">
-                            <h6>Продам МФУ SCX-4200 как новый</h6>
-                            <div>
-                                <div class="ad-secondary-text">Samsung</div>
-                                <div class="ad-secondary-text">SCX-4200</div>
+                        <div class="col-12 align-self-start">
+                            <h6>4 500 ₽</h6>
+                            <a href="#page">Алексей</a>
+                            <div class="rating">
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star-half-o"></span>
+                                <span class="fa fa-star-o"></span>
+                                <span class="ad-secondary-text">184 отзыва</span>
                             </div>
-                            <p>Отличный МФУ (принтер, сканер и копир, 3 в 1) для дома и учебы! </p>
                         </div>
-                        <div class="col-12 align-items-end">
-                            <span class="ad-secondary-text align-text-bottom">г. Самара, ул. Красногвардейская дом 20</span>
+                        <div class="col-12 align-self-end">
+                            <button type="button" class="btn btn-primary btn-sm w-100 mt-2 btn-ask">Спросить</button>
+                            <button type="button" class="btn btn-success btn-sm w-100 mt-1 btn-ask">Купить</button>
                         </div>
                     </div>
-                </div>
-                <div class="col-3">
-                    <h6>4 500 ₽</h6>
-                    <a href="#page">Алексей</a>
-
-                    <div class="rating">
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star-half-o"></span>
-                        <span class="fa fa-star-o"></span>
-                        <span class="ad-secondary-text">184 отзыва</span>
-                    </div>
-                    <button type="button" class="btn btn-primary btn-sm w-100 mt-2 btn-ask">Спросить</button>
-                    <button type="button" class="btn btn-success btn-sm w-100 mt-1 btn-ask">Купить</button>
-
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 ads ads_list">
-                    <div class="ads_wrapper">
-                        <a href="#" title="Продам принтер HP 1010 как новый!">
-                            <img src="../img/print_main.jpg">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="#" title="Продам принтер HP 1010 как новый!">
-                            <h6>Продам принтер HP 1010 как новый!</h6>
-                        </a>
-                        <a href="#">
-                            <p class="price"> 3230 руб.<span title="Продажа" class="ads_sell"><i class="fa fa-legal"></i></span></p>
 
-                            <p class="address"> г. Самара, ул. Красногвардейская дом 20</p>
-                            <p class="time">Сегодня, 11:34</p>
-                        </a>
-                    </div>
+        </div>
+    </div>
 
-                </div>
+    <!-- строка выбора услуг продвижения -->
+    <div class="row pt-3">
+        <div class="col-lg-3">
+            <label>Услуги продвижения:</label>
+        </div>
+        <div class="col-9">
+            <div class="custom-control custom-switch">
+                <input type="checkbox" class="custom-control-input" id="switch-top-rate">
+                <label class="custom-control-label" for="switch-top-rate">Удерживать в ТОПе 7 дней - 100 ₽</label>
+            </div>
+            <div class="custom-control custom-switch">
+                <input type="checkbox" class="custom-control-input" id="switch-top-color">
+                <label class="custom-control-label" for="switch-top-color">Выделить цветом на 7 дней - 50 ₽</label>
+            </div>
+            <div class="custom-control custom-switch">
+                <input type="checkbox" class="custom-control-input" id="switch-top-vip">
+                <label class="custom-control-label" for="switch-top-vip">Поместить в блок VIP на 7 дней - 100 ₽</label>
+            </div>
+            <div class="custom-control custom-switch">
+                <input type="checkbox" class="custom-control-input" id="switch-top-descrip">
+                <label class="custom-control-label" for="switch-top-descrip">Показать краткое описание на 14 дней - 20 ₽</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- строка инфо срока размещения -->
+    <div class="row pt-3">
+        <div class="col-lg-3">
+            <label>Период размещения:</label>
+        </div>
+        <div class="col-9">
+            14 суток
+        </div>
+    </div>
+
+    <!-- строка итого к оплате -->
+    <div class="row pt-3">
+        <div class="col-lg-3">
+            <label>Итого к оплате:</label>
+        </div>
+        <div class="col-9">
+            <h6>100 ₽</h6>
+        </div>
+    </div>
+
+    <!-- строка итого к оплате -->
+    <div class="row pt-3">
+        <div class="col-lg-3">
+            <label>Способ оплаты:</label>
+        </div>
+        <div class="col-9">
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="payment-method" id="payment-method-wallet" value="wallet" checked>
+                <label class="form-check-label" for="payment-method-wallet">
+                    Кошелек аккаунта
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="payment-method" id="payment-method-cashless" value="cashless">
+                <label class="form-check-label" for="payment-method-cashless">
+                    Безналичный рассчет
+                </label>
             </div>
 
+        </div>
+    </div>
+
+
+
+    <!-- строка кнопок редактировать и опубликовать -->
+    <div class="form-row pt-4 pb-3">
+        <div class="offset-3 col-lg-3">
+            <button type="button" class="btn btn-secondary w-100">< Редактировать</button>
+        </div>
+        <div class="col-lg-3">
+            <button type="submit" class="btn btn-primary w-100">Опубликовать</button>
         </div>
     </div>
 
