Работаю над страницей добавления объявления

--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -205,7 +205,7 @@
         </div>
         <div class="col-lg-9">
 
-            <div class="row mb-2 pt-3 pb-3 rounded ad-thumb top-color">
+            <div class="row mb-2 pt-3 pb-3 rounded ad-thumb short-descrip-off">
                 <div class="col-3 align-self-start">
                     <img class="img-fluid rounded" src="../img/thumb_150x190_printer_.jpg">
                 </div>
@@ -215,8 +215,10 @@
                             <h6 class="ad-caption">Продам МФУ SCX-4200 как новый</h6>
                             <div class="ad-secondary-text">Samsung</div>
                             <div class="ad-secondary-text">SCX-4200</div>
-                            <p class="mb-0">Отличный МФУ (принтер, сканер и копир, 3 в 1) для дома и учебы! Так же отлично подойдет для офиса.</p>
-                            <p class="mb-0">Лазерный, Ч/Б, USB/LAN, 24 тыс. стр.</p>
+                            <div class="short-descrip">
+                                <p class="mb-0">Отличный МФУ (принтер, сканер и копир, 3 в 1) для дома и учебы! Так же отлично подойдет для офиса.</p>
+                                <p class="mb-0">Лазерный, Ч/Б, USB/LAN, 24 тыс. стр.</p>
+                            </div>
 
                         </div>
                         <div class="col-12 align-self-end">
