Дорабатываю страницу подачи объявления

--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -275,6 +275,19 @@
                 <input type="checkbox" class="custom-control-input" id="switch-top-descrip">
                 <label class="custom-control-label" for="switch-top-descrip">Показать краткое описание на 14 дней - 20 ₽</label>
             </div>
+            <div class="custom-control custom-switch text-danger">
+                <input type="checkbox" class="custom-control-input" id="switch-fast-search">
+                <label class="custom-control-label" for="switch-fast-search">Горячий поиск на 7 дней - 50 ₽</label>
+                <span class="ad-secondary-text" data-toggle="collapse" data-target="#fast-search-info" aria-expanded="false" aria-controls="fast-search-info">Подробнее</span>
+                <button class="btn btn-link p-0" type="button" data-toggle="collapse" data-target="#fast-search-info" aria-expanded="false" aria-controls="fast-search-info">
+                    Подробнее
+                </button>
+            </div>
+            <div class="collapse" id="fast-search-info">
+                <div class="card card-body mt-2">
+                    Некоторый заполнитель для компонента сворачивания. Эта панель по умолчанию скрыта, но открывается, когда пользователь активирует соответствующий триггер.
+                </div>
+            </div>
         </div>
     </div>
 
