Дорабатываю страницу подачи объявления

--- a/pages/add_ad_3.html
+++ b/pages/add_ad_3.html
@@ -172,36 +172,11 @@
 <!--Основной контент сайта-->
 <div class="container">
     <!-- Заголовок раздела -->
-    <h1 class="text-center">Добавить новое объявление</h1>
-    <!-- строка типа объявления -->
-    <div class="row pt-3">
-        <div class="col-lg-3">
-            <label>Тип:</label>
-        </div>
-        <div class="col-9">
-            Объявление о продаже
-        </div>
-    </div>
-
-    <!-- строка категории размещения -->
-    <div class="row pt-3">
-        <div class="col-lg-3">
-            <label>Категория:</label>
-        </div>
-        <div class="col-9">
-            <nav>
-                <ol class="breadcrumb m-0">
-                    <li class="breadcrumb-item">Принтеры/копиры</li>
-                    <li class="breadcrumb-item active">Запчасти для принтеров/копиров</li>
-                </ol>
-            </nav>
-        </div>
-    </div>
-
+    <h1 class="text-center">Оплата прошла успешно!</h1>
     <!-- строка предпросмотра объявления -->
     <div class="row pt-3">
         <div class="col-lg-3">
-            <label>Предпросмотр:</label>
+            <label>Объявление:</label>
         </div>
         <div class="col-lg-9">
 
@@ -253,6 +228,21 @@
         </div>
     </div>
 
+    <!-- строка инфо размещения -->
+    <div class="row pt-3">
+        <div class="offset-3 col-9">
+            Ваше объявление успешно оплачено и вскоре появится в списке объявлений, после проверки нашим модератором.
+        </div>
+        <div class="offset-3 col-9 pt-2">
+            Выбранные услуги продвижения:
+            <ul>
+                <li>Удерживать в ТОПе - до 12.05.2022г.</li>
+                <li>Выделить цветом - до 12.05.2022г.</li>
+                <li>Горячий поиск - до 12.05.2022г.</li>
+            </ul>
+        </div>
+    </div>
+
     <!-- строка выбора услуг продвижения -->
     <div class="row pt-3">
         <div class="col-lg-3">
@@ -295,15 +285,7 @@
         </div>
     </div>
 
-    <!-- строка инфо срока размещения -->
-    <div class="row pt-3">
-        <div class="col-lg-3">
-            <label>Срок размещения:</label>
-        </div>
-        <div class="col-9">
-            30 дней
-        </div>
-    </div>
+
 
     <!-- строка итого к оплате -->
     <div class="row pt-3">
