--- a/pages/temp.html
+++ b/pages/temp.html
@@ -20,7 +20,7 @@
         <div class="col-3 align-self-start">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, consequuntur esse et facilis fugiat ipsam labore magnam necessitatibus nesciunt nisi odit provident quo reiciendis! Ab atque delectus deleniti doloremque, doloribus eaque earum esse eum ex facilis fugiat fugit in iure libero minus nemo nobis omnis placeat qui quidem reiciendis sit ut. Commodi, earum unde?
         </div>
-        <div class="col-6 align-self-center">
+        <div class="col-6 align-self-center h6">
             One of three columns
         </div>
         <div class="col-3 align-self-end">
