Дорабатываю страницу подачи объявления Сделал страницу успешной оплаты при подаче объявления

--- a/pages/payment_success.html
+++ b/pages/payment_success.html
@@ -187,18 +187,46 @@
     <div class="row pt-3">
         <!-- Левая колонка -->
         <div class="col-lg-3">
-            <a href="#page" class="d-block mb-2 text-decoration-none">Мои объявления</a>
-            <a href="#page" class="d-block mb-2 text-decoration-none">Мои запросы</a>
-            <a href="#page" class="d-block mb-2 text-decoration-none">Мои сделки</a>
-            <a href="#page" class="d-block mb-2 text-decoration-none">Мои отзывы</a>
-            <hr>
-            <a href="#page" class="d-block mb-2 text-decoration-none">Сообщения</a>
-            <a href="#page" class="d-block mb-2 text-decoration-none">Уведомления</a>
-            <a href="#page" class="d-block mb-2 text-decoration-none">Избранное</a>
-            <hr>
-            <a href="#page" class="d-block mb-2 text-decoration-none">Мой кошелек</a>
-            <hr>
-            <a href="#page" class="d-block mb-2 text-decoration-none">Настройки профиля</a>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none active" href="#page">Мои объявления</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Мои запросы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Мои сделки</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Мои отзывы</a>
+                    <div class="rating">
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-half-o"></span>
+                        <span class="fa fa-star-o"></span>
+                        <span class="text-secondary h6 mb-0">184 отзыва</span>
+                    </div>
+                </li>
+                <li class="dropdown-divider"></li>
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Сообщения</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Уведомления</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Избранное</a>
+                </li>
+                <li class="dropdown-divider"></li>
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Мой кошелек</a>
+                </li>
+                <li class="dropdown-divider"></li>
+                <li class="nav-item">
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Настройки профиля</a>
+                </li>
+            </ul>
         </div>
         <!-- Центральная основная колонка -->
         <div class="col-lg-9">
@@ -259,6 +287,9 @@
                         <li>Горячий поиск - до 12.05.2022г.</li>
                     </ul>
                     <p>Срок публикации объявления - до 25.05.2022г.</p>
+                    <p class="mb-2">Посмотреть ваши объявления можно в - <a href="#page" class="text-decoration-none">Мои объявления</a></p>
+                    <p>Посмотреть ваши запросы можно в - <a href="#page" class="text-decoration-none">Мои запросы</a></p>
+                    <p></p>
                 </div>
             </div>
         </div>
