--- a/pages/payment_success.html
+++ b/pages/payment_success.html
@@ -189,7 +189,7 @@
         <div class="col-lg-3">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link p-0 mb-2 text-decoration-none active" href="#page">Мои объявления</a>
+                    <a class="nav-link p-0 mb-2 text-decoration-none" href="#page">Мои объявления</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link p-0 mb-2 text-decoration-none" href="#">Мои запросы</a>
