Делаю страницу сообщений

--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -11,8 +11,7 @@
     <!-- Корректировка стиля. -->
     <link rel="stylesheet" href="../fonts/stylesheet.css">
     <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/add_ad.css">
-    <link rel="stylesheet" href="../css/ads_views.css">
+    <link rel="stylesheet" href="../css/messages.css">
 
 
 
@@ -230,30 +229,37 @@
         </div>
         <!-- Центральная основная колонка -->
         <div class="col-lg-9">
-            <!--  -->
             <div class="row">
-                <div class="col-4 overflow-auto bg-success">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>4</div>
-                    <div>5</div>
-                    <div>6</div>
-                    <div>7</div>
-                    <div>8</div>
-                    <div>9</div>
-                    <div>10</div>
-                    <div>10</div>
-                    <div>10</div>
-                    <div>10</div>
-                    <div>10</div>
-                    <div>10</div>
+                <!-- колонка выбора чата (объявления) -->
+                <div class="col-4 border border-primary overflow-auto messages-box">
+                    <div class="mt-1 mb-1">
+                        <img class="rounded" src="../img/thumb_50x50_printer_.jpg" alt="">
+
+                    </div>
+                    <div class="mt-1 mb-1">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+                    <div class="mb-2">1</div>
+
                 </div>
-                <div class="col-8 bg-danger">
-                    2
+                <!-- колонка чата объявления -->
+                <div class="col-8 border border-primary overflow-auto">
+
                 </div>
             </div>
-
         </div>
     </div>
 </div>
