--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../fonts/stylesheet.css">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/messages.css">
+    <link rel="stylesheet" href="../css/ads_views.css">
 
 
 
@@ -230,6 +231,9 @@
         <!-- Центральная основная колонка -->
         <div class="col-lg-9">
             <div class="row">
+                <div class="col-12 border border-primary">
+
+                </div>
                 <!-- колонка выбора чата (объявления) -->
                 <div class="col-4 border border-primary overflow-auto messages-box">
                     <div class="mt-1 mb-1">
