Делаю страницу сообщений

--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -229,40 +229,59 @@
             </ul>
         </div>
         <!-- Центральная основная колонка -->
-        <div class="col-lg-9">
+        <div class="col-lg-9 mb-3">
             <div class="row">
-                <div class="col-12 border border-primary">
+                <div class="col-12 border border-primary rounded">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="row">
+                                <div class="col-12">
+                                    Выберите чат
+                                </div>
+                                <div class="col-12 border-right border-primary overflow-auto messages-box">
+                                    <div class="mt-1 mb-1">
+                                        <img class="rounded" src="../img/thumb_50x50_printer_.jpg" alt="">
+                                    </div>
 
-                </div>
-                <!-- колонка выбора чата (объявления) -->
-                <div class="col-4 border border-primary overflow-auto messages-box">
-                    <div class="mt-1 mb-1">
-                        <img class="rounded" src="../img/thumb_50x50_printer_.jpg" alt="">
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                    <div class="mb-2">1</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="row h-100">
+                                <div class="col-12 align-self-start">
+                                    info
+                                </div>
+                                <div class="col-12 overflow-auto">
+                                    messages
+                                </div>
+                                <div class="col-12 align-self-end">
+                                    Form for input message
+                                </div>
+                            </div>
+                        </div>
+                        <!-- колонка выбора чата (объявления) -->
+
+                        <!-- колонка чата объявления -->
 
                     </div>
-                    <div class="mt-1 mb-1">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-                    <div class="mb-2">1</div>
-
                 </div>
-                <!-- колонка чата объявления -->
-                <div class="col-8 border border-primary overflow-auto">
 
-                </div>
             </div>
         </div>
     </div>
