Делаю страницу сообщений

--- a/pages/add_ad_2.html
+++ b/pages/add_ad_2.html
@@ -230,7 +230,10 @@
                 <div class="col-3">
                     <div class="row h-100">
                         <div class="col-12 align-self-start">
-                            <div class="h4">4 500 ₽</div>
+                            <div class="h4">
+                                <span>4 500 ₽</span>
+                                <span class="text-secondary fa fa-legal"></span>
+                            </div>
                             <a href="#page">Алексей</a>
                             <div class="rating">
                                 <span class="fa fa-star"></span>
