--- a/pages/account_message.html
+++ b/pages/account_message.html
@@ -235,7 +235,7 @@
                     Выберите чат
                 </div>
                 <div class="col-8">
-                    <div class="row">
+                    <div class="row mb-2">
                         <div class="col-9">
                             <div class="h4">
                                 Старая добрая деревяшка Nokia
@@ -540,11 +540,28 @@
                 </div>
                 <div class="col-8">
                     <div class="row h-100">
-                        <div class="col-12 overflow-auto">
+                        <div class="col-12 overflow-auto bg-light">
                             messages
                         </div>
                         <div class="col-12 align-self-end">
-                            Form for input message
+                            <form action="#page">
+                                <div class="form-row mb-2">
+                                    <div class="col-1">
+                                        <button type="button" class="btn btn-secondary btn-sm w-100">
+                                            <span class="fa fa-paperclip"></span>
+                                        </button>
+                                    </div>
+                                    <div class="col-10">
+                                        <textarea id="input-description" rows="1" class="form-control form-control-sm"></textarea>
+                                    </div>
+                                    <div class="col-1 pl-1">
+                                        <button type="button" class="btn btn-sm btn-inline btn-send-message p-0">
+                                            <span class="text-primary fa fa-paper-plane-o"></span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+
                         </div>
                     </div>
                 </div>
